--- a/index.html
+++ b/index.html
@@ -1848,16 +1848,17 @@
                 <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26 12,2" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
             </div>
-            <div class="cert-title">Python Programming Expert</div>
+            <div class="cert-title">
+Building Decision-Making Skills in the Age of AI</div>
           </div>
-          <p class="cert-issuer">Kaggle Learn</p>
-          <p class="cert-desc">Expert-level certification demonstrating proficiency in Python programming, data structures, algorithms, and advanced programming concepts.</p>
+          <p class="cert-issuer">linkedin Learn</p>
+          <p class="cert-desc">Learn to enhance decision-making by integrating AI-driven insights with human judgment.</p>
           <div>
-            <a class="repo-link" href="https://www.kaggle.com/learn/certification/mainakbose21/python" target="_blank" rel="noopener">
+            <a class="repo-link" href="https://www.linkedin.com/learning/certificates/f1ab1ad9a794145c59660347764ce03e1273fa6d89c9e892abfcb585090844e3?trk=share_certificate" target="_blank" rel="noopener">
               <svg width="14" height="14" viewBox="0 0 24 24" fill="none" aria-hidden="true">
                 <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" fill="currentColor"/>
               </svg>
-              View Badge
+              View certificate
             </a>
           </div>
         </div>
