--- a/index.html
+++ b/index.html
@@ -1505,7 +1505,10 @@
             <div class="cursor" role="presentation"></div>
           </div>
 
-          <p class="hero-desc">Transforming ideas into intelligent reality through advanced AI engineering, prompt optimization, and Python development. Building scalable solutions that bridge human creativity with machine intelligence.</p>
+          <p class="hero-desc">AI & Python Developer
+Turning ideas into practical solutions
+Learning, building, improving every day
+phone number :+91-8250488522.</p>
 
           <div class="cta">
             <a class="btn btn-primary" href="#projects">
