--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,7 @@
 
           <p class="hero-desc">AI & Python Developer
 Turning ideas into practical solutions
-Learning, building, improving every day <br>
+Learning, building, improving every day. <br> <br>
 phone number :+91-8250488522.</p>
 
           <div class="cta">
